--- a/Refactoring/UnevenArchivator-MVVM.csproj
+++ b/Refactoring/UnevenArchivator-MVVM.csproj
@@ -63,8 +63,13 @@
     </ApplicationDefinition>
     <Compile Include="Model\Model.cs" />
     <Compile Include="ViewModel\ColumnSort.cs" />
+    <Compile Include="ViewModel\Converters.cs" />
+    <Compile Include="ViewModel\EventsByDP.cs" />
     <Compile Include="ViewModel\MainVM.cs" />
-    <Page Include="View\Dictionary1.xaml">
+    <Compile Include="View\Resources\WindowControl\WindowButtons.xaml.cs">
+      <DependentUpon>WindowButtons.xaml</DependentUpon>
+    </Compile>
+    <Page Include="View\MainDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -80,6 +85,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\Resources\WindowControl\WindowButtons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
